--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/wix/react-native-autogrow-textinput.git"
   },
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "React Native auto-growing multiline text input",
   "nativePackage": true,
   "bugs": {
@@ -18,6 +18,7 @@
   "author": "Artal Druk <artald@wix.com>",
   "license": "MIT",
   "peerDependencies": {
-    "react-native": ">=0.21.0"
+    "react-native": ">=0.25.1",
+    "react": ">=0.14.5"
   }
 }
