--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,6 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.2",
-    "react-native-autogrow-textinput": "latest"
+    "react-native-autogrow-textinput": "file:../"
   }
 }
