update to RN 0.57.3

--- a/example/package.json
+++ b/example/package.json
@@ -6,8 +6,8 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "16.0.0",
-    "react-native": "0.51.0",
+    "react": "^16.6.0-alpha.8af6728",
+    "react-native": "^0.57.3",
     "react-native-autogrow-textinput": "latest"
   }
 }
