--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,16 @@
 apply plugin: 'com.android.library'
 
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion safeExtGet('compileSdkVersion', 25)
+    buildToolsVersion safeExtGet('buildToolsVersion', '25.0.3')
+
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdkVersion safeExtGet('minSdkVersion', 16)
+        targetSdkVersion safeExtGet('targetSdkVersion', 25)
         versionCode 1
         versionName "1.0"
     }
@@ -18,10 +23,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation  fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:${safeExtGet('supportLibVersion', '25.3.1')}"
+    implementation  'com.facebook.react:react-native:+'
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.facebook.react:react-native:+'
-
-    testCompile 'junit:junit:4.12'
+    testImplementation  'junit:junit:4.12'
 }
