example project: upgrade to RN 0.59

--- a/example/package.json
+++ b/example/package.json
@@ -6,8 +6,9 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "^16.6.0-alpha.8af6728",
-    "react-native": "^0.57.3",
+    "react": "16.8.3",
+    "react-native": "0.59.x",
+    "metro-react-native-babel-preset": "^0.53.1",
     "react-native-autogrow-textinput": "latest"
   }
 }
