--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,7 +1,3 @@
-rootProject.name = 'example'
-
+rootProject.name = 'AutogrowTextinput'
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
-
-include ':react-native-autogrow-textinput'
-project(':react-native-autogrow-textinput').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-autogrow-textinput/android')
-
