--- a/example/package.json
+++ b/example/package.json
@@ -1,14 +1,31 @@
 {
-  "name": "example",
-  "version": "0.0.1",
+  "name": "AutogrowTextinput",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.x",
+    "react": "16.9.0",
+    "react-native": "0.61.4",
     "metro-react-native-babel-preset": "^0.53.1",
     "react-native-autogrow-textinput": "latest"
+  },
+  "devDependencies": {
+    "@babel/core": "7.7.2",
+    "@babel/runtime": "7.7.2",
+    "@react-native-community/eslint-config": "0.0.5",
+    "babel-jest": "24.9.0",
+    "eslint": "6.6.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.3",
+    "react-test-renderer": "16.9.0"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
